--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,44 +12,49 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Our Medicines</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "Home" , root_path, class:"nav-link active" %>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Report Error</a>
-        </li>
-        
-      </ul>
-      <span class="navbar-text">
+    <div class = "form-group p-2">
+
+    <ul class="nav nav-underline">
+  <li class="nav-item">
+    <%= link_to image_tag("/assets/icon.png", height:"100px"),root_path,class:"nav-link active"%>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Features</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Contact Us</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" aria-disabled="true">Report Error</a>
+  </li>
+  <li class="nav-item">
         <% if user_signed_in? %> 
           <div style="display:flex;">
-            <%= link_to current_user.email, edit_user_registration_path(current_user) %>
+            <%= link_to current_user.email, edit_user_registration_path(current_user), class:"nav-link" %>
+            </li>
+            <li class="nav-item">
             <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger" %> 
+            </li>
           </div>
         <% else %>
           <%= link_to "Sign in", new_user_session_path, class: "btn btn-secondary"%> 
+          </li>
+          <li class="nav-item">
           <%= link_to "SignUp", new_user_registration_path, class: "btn btn-secondary"%> 
+          </li>
         <%end%>
+    
+  </li>
+      <span class="navbar-text">
       </span>
+</ul>
     </div>
   </div>
 </nav>
-    <div class = "form-group px-5">
+      <br>
+       <div class = "form-group px-5">
       <%= yield %>
+      </div>
     </div>
   </body>
 </html>
