--- a/app/views/medicines/_form.html.erb
+++ b/app/views/medicines/_form.html.erb
@@ -5,7 +5,14 @@
 
       <ul>
         <% medicine.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <%# <li><%= error.full_message %></li> %>
+
+          <div class="alert alert-alert alert-dismissible fade show" role="alert">
+            <%=error.full_message%>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+          </button>
+          </div>
         <% end %>
       </ul>
     </div>
